--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
                 <p>I am eager to hear about any interesting projects. I've been on teams for most of my life and I am
                     excited to work with other developers. If you want to connect or collaborate, please feel free to <a
                         href="#contact">contact me</a>.</p>
-                <p>Here are some services I hope to provide:</p>
+                <p>Here are some services I can provide:</p>
                 <ul>
                     <li>Freelance projects</li>
                     <li>JavaScript</li>
                     <li>React</li>
-                    <li>Game Development</li>
+                    <li>NodeJS</li>
+                    <li>PostgreSQL</li>
+                    <li>Express</li>
                 </ul>
                 <hr>
             </article>
@@ -88,7 +90,7 @@
                 <p>You can view the code <a href="https://github.com/mittsc01/travelling-salesman">here</a>.</p>
                 <div id="splatter-div" class="text-center">
 
-                    <img alt="A screenshot of the game Splatter" src="splatter2.png" />
+                    <img alt="An image of a user adding points to a route." src="/ts-screenshots/AddRoute.png" />
                 </div>
 
 
