--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p>You can view the code <a href="https://github.com/mittsc01/travelling-salesman">here</a>.</p>
                 <div id="splatter-div" class="text-center">
 
-                    <img alt="An image of a user adding points to a route." src="./ts-screenshots/AddRoute.png" />
+                    <img alt="An image of a user adding points to a route." src="ts-screenshots/AddRoute.png" />
                 </div>
 
 
