--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
                 <p>I am excited to progress as a developer and work on a diverse set of projects. The act of writing
                     code--an abstract thing that accomplishes a practical, however mundane, task--is thrilling.</p>
-                <p>Some of my interests not necessarily related to coding include: math (MS Northern Arizona University
-                    2017), distance running, gravel biking and reading books. If my interests have a unifying theme, it
+                <p>Some of my interests not necessarily related to coding include math (MS Northern Arizona University
+                    2017), distance running, gravel biking, and reading books. If my interests have a unifying theme, it
                     is exploration. I love to explore places and ideas, both near and far, old and new. </p>
                 <p>I am eager to hear about any interesting projects. I've been on teams for most of my life and I am
                     excited to work with other developers. If you want to connect or collaborate, please feel free to <a
@@ -106,7 +106,7 @@
                 <h3>Race Director</h3>
                 <p>
                     The Race director app allows the user to create an account and start creating races with basic information
-                     (date, start time, distance, city, state, etc).  Users can add manage results for the races they create as well as view other users races.  I built this because I wanted to provide an easy way to share races and race results.
+                     (date, start time, distance, city, state, etc).  Users can add manage results for the races they create as well as view other users' races.  I built this because I wanted to provide an easy way to share races and race results.
                 </p>
                 <h4>Technologies</h4>
                 <ul>
@@ -136,7 +136,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                 </ul>
-                <p>You can view the live app <a href="https://race-app.vercel.app/">here</a>.</p>
+                <p>You can view the live app <a href="https://mittsc01.github.io/chase-the-sun/">here</a>.</p>
                 <p>You can view the code <a href="https://github.com/mittsc01/chase-the-sun">here</a>.</p>
                 <div class="text-center">
                     <img alt="A screenshot showing a single point with sunset/sunrise info." src="sundown-view.png" />
@@ -174,8 +174,8 @@
 
                 <p>I would love to connect! Don't hesitate to contact me.</p>
                 <ul>
-                    <li><a href="https://github.com/mittsc01" target="_blank">Github</a></li>
-                    <li><a href="https://www.linkedin.com/in/scott-mittman-794a441b1/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/mittsc01" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/scott-mittman/" target="_blank">LinkedIn</a></li>
                     <li><a href="mailto:scottmttmn@gmail.com">Email</a></li>
                 </ul>
                 <hr>
